--- a/frontend/login.html
+++ b/frontend/login.html
@@ -32,6 +32,7 @@
                             <input id="login-password" type="password" name="password" required>
                         </div>
                     </fieldset>
+                    <h3 id="content1" style="color: black;text-align: center;"></h3>
                     <button type="submit" class="btn-login">Login</button>
                 </form>
             </div>
@@ -44,6 +45,10 @@
                     <fieldset>
                         <legend>Please, enter your email, password and password confirmation for sign up.</legend>
                         <div class="input-block">
+                            <label for="signup-name">Name</label>
+                            <input id="signup-name" type="text" required>
+                        </div>
+                        <div class="input-block">
                             <label for="signup-email">E-mail</label>
                             <input id="signup-email" type="email" required>
                         </div>
@@ -51,14 +56,14 @@
                             <label for="signup-password">Password</label>
                             <input id="signup-password" type="password" required>
                         </div>
-                        <div class="input-block">
+                        <!-- <div class="input-block">
                             <label for="signup-password-confirm">Confirm password</label>
                             <input id="signup-password-confirm" type="password" required>
-                        </div>
+                        </div> -->
                     </fieldset>
-                    <button type="submit" class="btn-signup">Continue</button>
+                    <h3 id="content" style="color: black;text-align: center;"></h3>
+                    <button type="submit" class="btn-signup">Sign Up</button>
                 </form>
-                <p id="content"></p>
             </div>
         </div>
     </div>
