dynamic data added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
     <div id="mySidenav" class="sidenav d-none d-md-flex flex-column justify-content-around align-items-center ">
         <a href="#" class="text-right w-100" id="close"><i class="fas fa-times-circle"></i></a>
         <div class="navbar">
+            <h3 id="name0"></h3>
             <a href="pages/login.html"><i class="fab fa-discourse" style="margin-right: 5px"></i>Categories</a>
             <a href="#"><i class="fas fa-chart-pie" style="margin-right: 5px"></i>Overview</a>
             <a href="./pages/leaderboard.html"><i class="far fa-calendar-alt"
@@ -209,7 +210,7 @@
         </div>
         <div class="right col-12 col-md-5">
             <div class="right1">
-                <h3>Hi User!</h3>
+                <h3 id="name1"></h3>
                 <h4 id="result">You have completed 5 quizzes</h4>
                 <h4 id="score">Highest Score is 480</h4>
                 <div class="ct-chart ct-perfect-fourth"></div>
