--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
         <a href="#" class="text-right w-100" id="close"><i class="fas fa-times-circle"></i></a>
         <div class="navbar">
             <h3 id="name0"></h3>
-            <a href="pages/login.html"><i class="fab fa-discourse" style="margin-right: 5px"></i>Categories</a>
+            <a href="#left"><i class="fab fa-discourse" style="margin-right: 5px"></i>Categories</a>
             <a href="#"><i class="fas fa-chart-pie" style="margin-right: 5px"></i>Overview</a>
             <a href="./pages/leaderboard.html"><i class="far fa-calendar-alt"
                     style="margin-right: 5px"></i>Leaderboard</a>
@@ -212,7 +212,7 @@
             <div class="right1">
                 <h3 id="name1"></h3>
                 <h4 id="result">You have completed 5 quizzes</h4>
-                <h4 id="score">Highest Score is 480</h4>
+                <h4 id="score" style="color: red;"></h4>
                 <div class="ct-chart ct-perfect-fourth"></div>
             </div>
             <div class="right2">
@@ -224,6 +224,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="./assets/js/nav.js"></script>
     <script src="./assets/js/main.js"></script>
     <script src="./assets/js/scripts.js"></script>
 </body>
