--- a/frontend/pages/leaderboard.html
+++ b/frontend/pages/leaderboard.html
@@ -43,7 +43,7 @@
     <div class="center" id="main">
       <h2 style="margin: 30px;">
         TOP SCORERS</h2>
-        <div class="cards" >
+        <div class="cards" id="cardd">
       <!-- <div class="card">
         <div class="additional">
           <div class="user-card" style="display: flex;flex-direction: column;">
@@ -176,7 +176,7 @@
   </div>
 </div>
     </div></div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
  <script src="../assets/js/nav.js"></script>
