--- a/frontend/home.html
+++ b/frontend/home.html
@@ -67,9 +67,7 @@
         <a href="#"
           ><i class="far fa-comment-alt" style="margin-right: 5px"></i>Chat</a
         >
-        <a href="#"
-          ><i class="fas fa-cog" style="margin-right: 5px"></i>Settings</a
-        >
+        <h3 id="logout" style="color: grey;">Logout</h3>
       </div>
       <div class="upgrade p-2 rounded">
         <p
@@ -279,7 +277,7 @@
       <div class="right col-12 col-md-5">
         <div class="right1">
           <h3 id="name1"></h3>
-          <h4 id="result">You have completed 5 quizzes</h4>
+          <h4 id="result"></h4>
           <h4 id="score" style="color: red"></h4>
           <div class="ct-chart ct-perfect-fourth"></div>
         </div>
