--- a/frontend/pages/quiz.html
+++ b/frontend/pages/quiz.html
@@ -62,6 +62,7 @@
         <a href="#"
           ><i class="fas fa-cog" style="margin-right: 5px"></i>Settings</a
         >
+        <h3 id="logout" style="color: grey;">Logout</h3>
       </div>
       <div class="upgrade p-2 rounded border border-primary">
         <p
@@ -162,7 +163,15 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="../assets/js/scripts.js"></script>
+    <script >
+      document.getElementById("logout").addEventListener("click",
+function(){
+  localStorage.clear();
+  window.location.replace(
+    "http://127.0.0.1:5501/frontend/index.html" 
+  );
+})
+    </script>
     <script src="../assets/js/quiz.js"></script>
   </body>
 </html>
