--- a/frontend/pages/quiz.html
+++ b/frontend/pages/quiz.html
@@ -45,7 +45,7 @@
       ></a>
       <div class="navbar">
         <h3 id="name0"></h3>
-        <a href="#left"
+        <a href="../../frontend/home.html"
           ><i class="fab fa-discourse" style="margin-right: 5px"></i
           >Categories</a
         >
