--- a/frontend/home.html
+++ b/frontend/home.html
@@ -67,9 +67,9 @@
         <a href="#"
           ><i class="far fa-comment-alt" style="margin-right: 5px"></i>Chat</a
         >
-        <h3 id="logout" style="color: grey;">Logout</h3>
+        <h3 id="logout" style="color: grey">Logout</h3>
       </div>
-      <div class="upgrade p-2 rounded">
+      <div class="upgrade p-2 rounded border border-primary">
         <p
           style="
             font-weight: bold;
