--- a/frontend/home.html
+++ b/frontend/home.html
@@ -279,6 +279,7 @@
           <h3 id="name1"></h3>
           <h4 id="result"></h4>
           <h4 id="score" style="color: red"></h4>
+          <h3 id="RecentScore" class="text-success"></h3>
           <div class="ct-chart ct-perfect-fourth"></div>
         </div>
         <div class="right2">
