added admin login

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <div class="forms-section">
-      <h1 class="section-title">WELCOME TO ___</h1>
+      <h1 class="section-title">WELCOME TO QUIZMASTER</h1>
       <div class="forms">
         <div class="form-wrapper is-active">
           <button type="button" class="switcher switcher-login">
@@ -38,6 +38,7 @@
                 />
               </div>
             </fieldset>
+            <input type="checkbox" id="check">Login as Admin
             <h3 id="content1" style="color: black; text-align: center"></h3>
             <button type="submit" class="btn-login">Login</button>
           </form>
